Created foundations of website
Set up Bootstrap properly and ready to build up the website into my blog.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- My CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="/css/main.css">
+    <link rel="stylesheet" type="text/css" href="css/main.css">
 
     <title>thehealthtrinity | Trinity Sazo </title>
   </head>
