--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="css/bootstrap.min.css">
 
     <!-- Meta tags for Facebook and Twitter -->
-    <meta property="og:title" content="European Travel Destinations">
-    <meta property="og:description" content="Offering tour packages for individuals or groups.">
-    <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg">
-    <meta property="og:url" content="http://euro-travel-example.com/index.htm">
-    <meta name="twitter:card" content="summary_large_image">
+    <meta property="og:title" content="thehealthtrinity">
+    <meta property="og:description" content="Trinity Sazo's physical, social, and mental health blog.">
+    <!-- <meta property="og:image" content="http://euro-travel-example.com/thumbnail.jpg"> -->
+    <meta property="og:url" content="https://tsazo.github.io/thehealthtrinity/">
+    <!-- <meta name="twitter:card" content="summary_large_image"> -->
 
     <!-- My CSS -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&family=Roboto&display=swap" rel="stylesheet">
