--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
 
         <div class="collapse navbar-collapse" id="navbarResponsive">         
         
-          <ul class="navbar-nav m-auto" style="width: fit-content;">
+          <ul class="navbar-nav m-auto text-center" style="width: fit-content;">
             <li class="nav-item active">
-              <a class="nav-link href="#">Home
+              <a class="nav-link" href="#">Home
                   <span class="sr-only">(current)</span>
                 </a>
             </li>
@@ -54,7 +54,10 @@
         </div>
 
         <div id="icons" class="col-4 collapse navbar-collapse">
-          <a class="ml-auto" href="#"><i class="fab fa-instagram"></i></a>
+          <div style="width: fit-content;" class="ml-auto">
+            <a href="https://www.instagram.com/thefitnesstrinity/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.youtube.com/channel/UCHzEbmpoZ1jc1lyw9ZtL_kg"><i class="fab fa-youtube"></i></i></a>
+          </div>
         </div> 
 
       </div>
@@ -63,11 +66,12 @@
 
     <!-- Full Page Image Header with Vertically Centered Content -->
     <header class="masthead">
+      <div id="overlay"></div>
       <div class="container h-100">
         <div class="row h-100 align-items-center">
           <div class="col-12 text-center">
             <h1>A blog about physical, mental, and social health.</h1>
-            <p class="lead">By Trinity Sazo</p>
+            <a id="blog-btn" class="btn btn-lg text-decoration-none" href="#">Read Here</a>
           </div>
         </div>
       </div>
