--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <link rel="stylesheet" type="text/css" href="css/about.css">
 
-    <title>thehealthtrinity | Trinity Sazo</title>
+    <title>thehealthtrinity | Contact</title>
   </head>
   <body>
     <div class="container-fluid">
